2011-11-28  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc: Remove all Win 9x considerations.  Use psapi functions
	directly.  Drop support for older Cygwin DLLs.  Just use progname_long
	as is since it's already a POSIX path now.  Rename "tty" to "pty" as in
	the Cygwin DLL.  Call setlocale to make sure wcstombs does the right
	thing according to the current locale.
	* Makefile.in (ps.exe): Link against psapi.dll.

2011-11-24  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* strace.cc (attach_process): Use NT_SUCCESS to figure out if
	NtSetInformationProcess succeeded.
	(handle_output_debug_string): Put back DebugActiveProcess since it
	seems to still be needed (on my system at least).  Detect new format
	_STRACE_INTERFACE_ACTIVATE_ADDR which informs whether this is a forked
	process or not.  Use that to decide if forkdebug should be handled.

2011-11-14  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* strace.cc (handle_output_debug_string): Disable code which attempted
	to add stuff in between '****' blocks since they no longer are the
	first thing output by an straced process.

2011-10-13  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Add Windows 8 recognition.  Note as
	unsupported.  Update products array.

2011-10-11  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* utils.sgml (getconf): Expand documentation.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* ldd.cc (VERSION): Remove.

2011-10-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* ldd.cc: Update copyright.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* Align usage output, version output, as well as usage and version
	option handling to use the same style throughout all Cygwin utils.
	Throughout use program_invocation_short_name to refer to current
	process name in Cygwin executables.
	* utils.sgml: Align documentation to above change.  Add missing
	sections for getconf, ldd, and setmetamode.
	* strace.cc (proc_child): Avoid compiler warning.
